# Feedbrief

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-binaries.yml
assets/: README.md
src/: app.rs  feeds.rs  fetcher.rs  llm.rs  main.rs  pipeline.rs  progress.rs  storage.rs
