[package]
name = "feedbrief"
version = "0.6.0"
edition = "2024"

[dependencies]
# UI
eframe = { version = "=0.29.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "=0.29.1"
egui_extras = { version = "=0.29.1", features = ["all_loaders"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP & feeds
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
feed-rs = "2"

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Utility
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
directories = "5"
open = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
